--- a/cluster/Vagrantfile
+++ b/cluster/Vagrantfile
@@ -102,6 +102,8 @@ Vagrant.configure("2") do |config|
           echo 'deploy ALL=(ALL) NOPASSWD: ALL' >> /etc/sudoers
           mkdir -p /home/deploy/.ssh && chown -R deploy /home/deploy/.ssh
           echo #{ssh_pub_key} >> /home/deploy/.ssh/authorized_keys
+          # config timezone
+          timedatectl set-timezone Asia/Ho_Chi_Minh
       SHELL
   end
 end
