--- a/cluster/Vagrantfile
+++ b/cluster/Vagrantfile
@@ -1,11 +1,13 @@
 NUM_MASTER_NODE = 2 # add standby master - recommend 3, 5, 7 master_node
 NUM_WORKER_NODE = 2
 NUM_PROXY_NODE = 2
+NUM_RUNNER_NODE = 1
 
 IP_NW = "192.168.56."
 MASTER_IP_START = 10
 NODE_IP_START = 15
 PROXY_IP_START = 30
+RUNNER_IP_START = 97
 
 Vagrant.configure("2") do |config|
   config.vm.box = "ubuntu/bionic64"
@@ -21,6 +23,20 @@ Vagrant.configure("2") do |config|
       node.vm.network :private_network, ip: "192.168.56.198"
       node.vm.network "forwarded_port", guest: 22, host: 12798
       node.vm.provision "setup-dns", type: "shell", :path => "../ubuntu/update-dns.sh"
+  end
+
+  (1..NUM_RUNNER_NODE).each do |i|
+    config.vm.define "runner0#{i}" do |node|
+      node.vm.provider "virtualbox" do |vb|
+        vb.name = "runner0#{i}"
+        vb.memory = 3072
+        vb.cpus = 3
+      end
+      node.vm.hostname = "runner0#{i}"
+      node.vm.network :private_network, ip: IP_NW + "#{RUNNER_IP_START + i}"
+      node.vm.network "forwarded_port", guest: 22, host: "#{2210 + i}"
+      node.vm.provision "setup-dns", type: "shell", :path => "../ubuntu/update-dns.sh"
+    end
   end
 
   (1..NUM_PROXY_NODE).each do |i|
@@ -78,6 +94,8 @@ Vagrant.configure("2") do |config|
           echo 'deploy ALL=(ALL) NOPASSWD: ALL' >> /etc/sudoers
           mkdir -p /home/deploy/.ssh && chown -R deploy /home/deploy/.ssh
           echo #{ssh_pub_key} >> /home/deploy/.ssh/authorized_keys
+          # config timezone
+          timedatectl set-timezone Asia/Ho_Chi_Minh
       SHELL
   end
 end
