--- a/cluster/Vagrantfile
+++ b/cluster/Vagrantfile
@@ -26,24 +26,13 @@ Vagrant.configure("2") do |config|
   config.vm.define "jenkins" do |node|
       node.vm.provider "virtualbox" do |vb|
         vb.name = "jenkins"
-        vb.memory = 2048
-        vb.cpus = 2
+        vb.memory = 3072
+        vb.cpus = 3
       end
       node.vm.hostname = "jenkins"
+      node.vm.synced_folder "../jenkins", "/tmp/jenkins", :mount_options => ["dmode=777", "fmode=666"]
       node.vm.network :private_network, ip: "192.168.56.98"
       node.vm.network "forwarded_port", guest: 22, host: 22106
-      node.vm.provision "setup-dns", type: "shell", :path => "../ubuntu/update-dns.sh"
-  end
-
-  config.vm.define "jenkins-agent" do |node|
-      node.vm.provider "virtualbox" do |vb|
-        vb.name = "jenkins-agent"
-        vb.memory = 2048
-        vb.cpus = 2
-      end
-      node.vm.hostname = "jenkins-agent"
-      node.vm.network :private_network, ip: "192.168.56.22"
-      node.vm.network "forwarded_port", guest: 22, host: 61102
       node.vm.provision "setup-dns", type: "shell", :path => "../ubuntu/update-dns.sh"
   end
 
