--- a/jenkins/nginx/nginx.conf
+++ b/jenkins/nginx/nginx.conf
@@ -1,5 +1,5 @@
 upstream jenkins{
-    server 127.0.0.1:8080;
+    server jenkins:8080;
 }
 
 server{
@@ -26,5 +26,4 @@ server{
         proxy_set_header    X-Forwarded-For   $proxy_add_x_forwarded_for;
         proxy_set_header    X-Forwarded-Proto $scheme;
     }
-
 }
