config minio with gitlab-runner

--- a/gitlab-ci/config.toml
+++ b/gitlab-ci/config.toml
@@ -34,7 +34,7 @@ shutdown_timeout = 0
     disable_entrypoint_overwrite = false
     oom_kill_disable = false
     disable_cache = false
-    volumes = ["/cache","/var/run/docker.sock:/var/run/docker.sock"]
+    volumes = ["/cache"]
     services_limit = 2
     shm_size = 0
     network_mtu = 0
