edit docker compose

--- a/gitlab-ci/docker-compose.yml
+++ b/gitlab-ci/docker-compose.yml
@@ -17,6 +17,7 @@ services:
       - gitlab-runner
 
   minio:
+    restart: always
     image: minio/minio:RELEASE.2024-03-10T02-53-48Z
     container_name: minio
     networks: 
