--- a/cluster/Vagrantfile
+++ b/cluster/Vagrantfile
@@ -2,12 +2,14 @@ NUM_MASTER_NODE = 2 # add standby master - recommend 3, 5, 7 master_node
 NUM_WORKER_NODE = 2
 NUM_PROXY_NODE = 2
 NUM_RUNNER_NODE = 1
+NUM_DOCKER_NODE = 2
 
 IP_NW = "192.168.56."
 MASTER_IP_START = 10
 NODE_IP_START = 15
 PROXY_IP_START = 30
 RUNNER_IP_START = 97
+DOCKER_IP_START = 60
 
 Vagrant.configure("2") do |config|
   config.vm.box = "ubuntu/bionic64"
@@ -36,6 +38,21 @@ Vagrant.configure("2") do |config|
       node.vm.synced_folder "../gitlab-ci", "/tmp/gitlab-ci", :mount_options => ["dmode=777", "fmode=666"]
       node.vm.network :private_network, ip: IP_NW + "#{RUNNER_IP_START + i}"
       node.vm.network "forwarded_port", guest: 22, host: "#{2210 + i}"
+      node.vm.provision "setup-dns", type: "shell", :path => "../ubuntu/update-dns.sh"
+    end
+  end
+
+  (1..NUM_DOCKER_NODE).each do |i|
+    config.vm.define "docker0#{i}" do |node|
+      node.vm.provider "virtualbox" do |vb|
+        vb.name = "docker0#{i}"
+        vb.memory = 1024
+        vb.cpus = 1
+      end
+      node.vm.hostname = "docker0#{i}"
+      node.vm.synced_folder "../gitlab-ci", "/tmp/gitlab-ci", :mount_options => ["dmode=777", "fmode=666"]
+      node.vm.network :private_network, ip: IP_NW + "#{DOCKER_IP_START + i}"
+      node.vm.network "forwarded_port", guest: 22, host: "#{2211 + i}"
       node.vm.provision "setup-dns", type: "shell", :path => "../ubuntu/update-dns.sh"
     end
   end
@@ -95,6 +112,7 @@ Vagrant.configure("2") do |config|
           echo 'deploy ALL=(ALL) NOPASSWD: ALL' >> /etc/sudoers
           mkdir -p /home/deploy/.ssh && chown -R deploy /home/deploy/.ssh
           echo #{ssh_pub_key} >> /home/deploy/.ssh/authorized_keys
+          chown -R deploy /home/deploy/.ssh/authorized_keys
           # config timezone
           timedatectl set-timezone Asia/Ho_Chi_Minh
       SHELL
