--- a/cluster/playbook/common-playbook.yml
+++ b/cluster/playbook/common-playbook.yml
@@ -62,6 +62,7 @@
         - apt-transport-https
         - ca-certificates
         - software-properties-common
+        - bridge-utils
       state: present
       update_cache: yes # this option is the same 'apt-get update'
 
