--- a/cluster/Vagrantfile
+++ b/cluster/Vagrantfile
@@ -42,20 +42,20 @@ Vagrant.configure("2") do |config|
     end
   end
 
-  (1..NUM_DOCKER_NODE).each do |i|
-    config.vm.define "docker0#{i}" do |node|
-      node.vm.provider "virtualbox" do |vb|
-        vb.name = "docker0#{i}"
-        vb.memory = 1024
-        vb.cpus = 1
-      end
-      node.vm.hostname = "docker0#{i}"
-      node.vm.synced_folder "../gitlab-ci", "/tmp/gitlab-ci", :mount_options => ["dmode=777", "fmode=666"]
-      node.vm.network :private_network, ip: IP_NW + "#{DOCKER_IP_START + i}"
-      node.vm.network "forwarded_port", guest: 22, host: "#{2211 + i}"
-      node.vm.provision "setup-dns", type: "shell", :path => "../ubuntu/update-dns.sh"
-    end
-  end
+  # (1..NUM_DOCKER_NODE).each do |i|
+  #   config.vm.define "docker0#{i}" do |node|
+  #     node.vm.provider "virtualbox" do |vb|
+  #       vb.name = "docker0#{i}"
+  #       vb.memory = 1024
+  #       vb.cpus = 1
+  #     end
+  #     node.vm.hostname = "docker0#{i}"
+  #     node.vm.synced_folder "../gitlab-ci", "/tmp/gitlab-ci", :mount_options => ["dmode=777", "fmode=666"]
+  #     node.vm.network :private_network, ip: IP_NW + "#{DOCKER_IP_START + i}"
+  #     node.vm.network "forwarded_port", guest: 22, host: "#{2211 + i}"
+  #     node.vm.provision "setup-dns", type: "shell", :path => "../ubuntu/update-dns.sh"
+  #   end
+  # end
 
   (1..NUM_PROXY_NODE).each do |i|
     config.vm.define "haproxy0#{i}" do |node|
