--- a/cluster/manifests/helm/helm_repo/index.yaml
+++ b/cluster/manifests/helm/helm_repo/index.yaml
@@ -3,7 +3,7 @@ entries:
   firstchart:
   - apiVersion: v2
     appVersion: 1.16.0
-    created: "2024-04-08T17:17:57.895294067Z"
+    created: "2024-04-29T15:10:04.811605733+07:00"
     dependencies:
     - import-values:
       - child: image
@@ -40,7 +40,7 @@ entries:
   fourstchart:
   - apiVersion: v2
     appVersion: 1.16.0
-    created: "2024-04-08T17:17:57.895905298Z"
+    created: "2024-04-29T15:10:04.812297398+07:00"
     description: A Helm chart for Kubernetes
     digest: ea822fa8e3c37da110bea2e201748c73c6793bd8ce90f1b2654cd8cb13d66fd9
     name: fourstchart
@@ -51,7 +51,7 @@ entries:
   nginx-signed-chart:
   - apiVersion: v2
     appVersion: 1.16.0
-    created: "2024-04-08T17:17:57.896573613Z"
+    created: "2024-04-29T15:10:04.812947431+07:00"
     description: A Helm chart for Kubernetes
     digest: 6ba658f8d4bc39972070c55d8fda4426e3683f91be8673af71618651adf1c48e
     name: nginx-signed-chart
@@ -62,7 +62,7 @@ entries:
   secondchart:
   - apiVersion: v2
     appVersion: 1.16.0
-    created: "2024-04-08T17:17:57.89715274Z"
+    created: "2024-04-29T15:10:04.813619859+07:00"
     description: A Helm chart for Kubernetes
     digest: dfd53331a4c926a75ea5c3ae9787cbc997bdccd73c223e790961e7f87fff6817
     name: secondchart
@@ -72,8 +72,200 @@ entries:
     version: 0.1.0
   socket_chart:
   - apiVersion: v2
+    appVersion: 1.16.0
+    created: "2024-04-29T15:10:04.833551926+07:00"
+    dependencies:
+    - name: ingress-nginx
+      repository: https://kubernetes.github.io/ingress-nginx
+      version: 4.10.0
+    - alias: socket-app-nfs
+      name: nfs-subdir-external-provisioner
+      repository: https://kubernetes-sigs.github.io/nfs-subdir-external-provisioner
+      version: 4.0.18
+    - name: metrics-server
+      repository: https://kubernetes-sigs.github.io/metrics-server
+      version: 3.12.1
+    description: DuongDX socket app - golang - react - mysql
+    digest: 2e2b632aa410e23fa1b93901ec6e63b4b4bd2dd94097c5b5be09d2d75d904ed5
+    maintainers:
+    - email: xuanduong.kma@gmail.com
+      name: duongdx
+    name: socket_chart
+    type: application
+    urls:
+    - socket_chart-0.1.15.tgz
+    version: 0.1.15
+  - apiVersion: v2
+    appVersion: 1.16.0
+    created: "2024-04-29T15:10:04.826565132+07:00"
+    dependencies:
+    - name: ingress-nginx
+      repository: https://kubernetes.github.io/ingress-nginx
+      version: 4.10.0
+    - alias: socket-app-nfs
+      name: nfs-subdir-external-provisioner
+      repository: https://kubernetes-sigs.github.io/nfs-subdir-external-provisioner
+      version: 4.0.18
+    - name: metrics-server
+      repository: https://kubernetes-sigs.github.io/metrics-server
+      version: 3.12.1
+    description: DuongDX socket app - golang - react - mysql
+    digest: 8ecdee8a795a30226a197d1e1456ac5d4be843aa99ce73d1b144e99bdd225b70
+    maintainers:
+    - email: xuanduong.kma@gmail.com
+      name: duongdx
+    name: socket_chart
+    type: application
+    urls:
+    - socket_chart-0.1.10.tgz
+    version: 0.1.10
+  - apiVersion: v2
+    appVersion: 1.16.0
+    created: "2024-04-29T15:10:04.894704907+07:00"
+    dependencies:
+    - name: ingress-nginx
+      repository: https://kubernetes.github.io/ingress-nginx
+      version: 4.10.0
+    - alias: socket-app-nfs
+      name: nfs-subdir-external-provisioner
+      repository: https://kubernetes-sigs.github.io/nfs-subdir-external-provisioner
+      version: 4.0.18
+    - name: metrics-server
+      repository: https://kubernetes-sigs.github.io/metrics-server
+      version: 3.12.1
+    description: DuongDX socket app - golang - react - mysql
+    digest: f5764ed463ca1a680451112a3fa6eff1beef355c61db7c6529e952e34ae5ca0d
+    maintainers:
+    - email: xuanduong.kma@gmail.com
+      name: duongdx
+    name: socket_chart
+    type: application
+    urls:
+    - socket_chart-0.1.9.tgz
+    version: 0.1.9
+  - apiVersion: v2
+    appVersion: 1.16.0
+    created: "2024-04-29T15:10:04.887444297+07:00"
+    dependencies:
+    - name: ingress-nginx
+      repository: https://kubernetes.github.io/ingress-nginx
+      version: 4.10.0
+    - alias: socket-app-nfs
+      name: nfs-subdir-external-provisioner
+      repository: https://kubernetes-sigs.github.io/nfs-subdir-external-provisioner
+      version: 4.0.18
+    - name: metrics-server
+      repository: https://kubernetes-sigs.github.io/metrics-server
+      version: 3.12.1
+    description: DuongDX socket app - golang - react - mysql
+    digest: 1bf8e63dc82745eceae87027494cadeccb1f2a16c0ad5c44590392da62ba6247
+    maintainers:
+    - email: xuanduong.kma@gmail.com
+      name: duongdx
+    name: socket_chart
+    type: application
+    urls:
+    - socket_chart-0.1.8.tgz
+    version: 0.1.8
+  - apiVersion: v2
     appVersion: 0.1.0
-    created: "2024-04-08T17:17:57.915754976Z"
+    created: "2024-04-29T15:10:04.880766499+07:00"
+    dependencies:
+    - name: ingress-nginx
+      repository: https://kubernetes.github.io/ingress-nginx
+      version: 4.10.0
+    - alias: socket-app-nfs
+      name: nfs-subdir-external-provisioner
+      repository: https://kubernetes-sigs.github.io/nfs-subdir-external-provisioner
+      version: 4.0.18
+    - name: metrics-server
+      repository: https://kubernetes-sigs.github.io/metrics-server
+      version: 3.12.1
+    description: DuongDX socket app - golang - react - mysql
+    digest: 3dac37c02e6df3654b2e2674f38a9c28c553771ca18e645fd53b62aa983da653
+    maintainers:
+    - email: xuanduong.kma@gmail.com
+      name: duongdx
+    name: socket_chart
+    type: application
+    urls:
+    - socket_chart-0.1.7.tgz
+    version: 0.1.7
+  - apiVersion: v2
+    appVersion: 0.1.0
+    created: "2024-04-29T15:10:04.874163939+07:00"
+    dependencies:
+    - name: ingress-nginx
+      repository: https://kubernetes.github.io/ingress-nginx
+      version: 4.10.0
+    - alias: socket-app-nfs
+      name: nfs-subdir-external-provisioner
+      repository: https://kubernetes-sigs.github.io/nfs-subdir-external-provisioner
+      version: 4.0.18
+    - name: metrics-server
+      repository: https://kubernetes-sigs.github.io/metrics-server
+      version: 3.12.1
+    description: DuongDX socket app - golang - react - mysql
+    digest: e9bee73800362c16c3d694e16470e203a91d2de85934f7f05b1f77dd17b90611
+    maintainers:
+    - email: xuanduong.kma@gmail.com
+      name: duongdx
+    name: socket_chart
+    type: application
+    urls:
+    - socket_chart-0.1.6.tgz
+    version: 0.1.6
+  - apiVersion: v2
+    appVersion: 0.1.0
+    created: "2024-04-29T15:10:04.866694167+07:00"
+    dependencies:
+    - name: ingress-nginx
+      repository: https://kubernetes.github.io/ingress-nginx
+      version: 4.10.0
+    - alias: socket-app-nfs
+      name: nfs-subdir-external-provisioner
+      repository: https://kubernetes-sigs.github.io/nfs-subdir-external-provisioner
+      version: 4.0.18
+    - name: metrics-server
+      repository: https://kubernetes-sigs.github.io/metrics-server
+      version: 3.12.1
+    description: DuongDX socket app - golang - react - mysql
+    digest: 9ed70d1195f9a487c3baf5ccbc626bee8e772aab05393401452f60a3eea20c64
+    maintainers:
+    - email: xuanduong.kma@gmail.com
+      name: duongdx
+    name: socket_chart
+    type: application
+    urls:
+    - socket_chart-0.1.5.tgz
+    version: 0.1.5
+  - apiVersion: v2
+    appVersion: 0.1.0
+    created: "2024-04-29T15:10:04.859964566+07:00"
+    dependencies:
+    - name: ingress-nginx
+      repository: https://kubernetes.github.io/ingress-nginx
+      version: 4.10.0
+    - alias: socket-app-nfs
+      name: nfs-subdir-external-provisioner
+      repository: https://kubernetes-sigs.github.io/nfs-subdir-external-provisioner
+      version: 4.0.18
+    - name: metrics-server
+      repository: https://kubernetes-sigs.github.io/metrics-server
+      version: 3.12.1
+    description: DuongDX socket app - golang - react - mysql
+    digest: 353181c8f536b7fadcd0525549eceec43a433a8e4128cd4137273415c2ac98b1
+    maintainers:
+    - email: xuanduong.kma@gmail.com
+      name: duongdx
+    name: socket_chart
+    type: application
+    urls:
+    - socket_chart-0.1.4.tgz
+    version: 0.1.4
+  - apiVersion: v2
+    appVersion: 0.1.0
+    created: "2024-04-29T15:10:04.853641007+07:00"
     dependencies:
     - name: ingress-nginx
       repository: https://kubernetes.github.io/ingress-nginx
@@ -97,7 +289,7 @@ entries:
     version: 0.1.3
   - apiVersion: v2
     appVersion: 0.1.0
-    created: "2024-04-08T17:17:57.908034814Z"
+    created: "2024-04-29T15:10:04.846630096+07:00"
     dependencies:
     - name: ingress-nginx
       repository: https://kubernetes.github.io/ingress-nginx
@@ -118,7 +310,7 @@ entries:
     version: 0.1.2
   - apiVersion: v2
     appVersion: 1.16.0
-    created: "2024-04-08T17:17:57.902236893Z"
+    created: "2024-04-29T15:10:04.819717784+07:00"
     dependencies:
     - name: ingress-nginx
       repository: https://kubernetes.github.io/ingress-nginx
@@ -140,7 +332,7 @@ entries:
   thirstchart:
   - apiVersion: v2
     appVersion: 1.16.0
-    created: "2024-04-08T17:17:57.91660098Z"
+    created: "2024-04-29T15:10:04.895286725+07:00"
     description: A Helm chart for Kubernetes
     digest: 6c8b4d9bc1ecea7ad65c6160aff5b6f2d2cf71f4015dca143eb8561697a6ecf9
     name: thirstchart
@@ -148,4 +340,4 @@ entries:
     urls:
     - thirstchart-0.1.0.tgz
     version: 0.1.0
-generated: "2024-04-08T17:17:57.885530097Z"
+generated: "2024-04-29T15:10:04.802191975+07:00"
