--- a/cluster/manifests/argocd/project-argocd-kustomize-dev.yaml
+++ b/cluster/manifests/argocd/project-argocd-kustomize-dev.yaml
@@ -7,7 +7,7 @@ spec:
   description: this  project only supports duongdx-kustomize product
 
   sourceRepos:
-  - https://github.com/duongdx-kma/k8s-manifetst-argocd-test.git
+  - git@github.com:duongdx-kma/k8s-manifetst-argocd-test.git
 
   destinations:
   - namespace: kustomize-dev
@@ -34,7 +34,7 @@ spec:
     server: https://kubernetes.default.svc
   project: kustomize-dev-project
   source:
-    repoURL: https://github.com/duongdx-kma/k8s-manifetst-argocd-test.git
+    repoURL: git@github.com:duongdx-kma/k8s-manifetst-argocd-test.git
     targetRevision: main
     path:  kustomize/overlays/dev
     kustomize:
