--- a/cluster/manifests/argocd/web-ui.yaml
+++ b/cluster/manifests/argocd/web-ui.yaml
@@ -10,7 +10,7 @@ spec:
   project: default
   source:
     path: web-ui
-    repoURL: https://github.com/duongdx-kma/k8s-manifetst-argocd-test.git
+    repoURL: git@github.com:duongdx-kma/k8s-manifetst-argocd-test.git
     targetRevision: main
   syncPolicy:
     syncOptions:
