--- a/cluster/playbook/common-playbook.yml
+++ b/cluster/playbook/common-playbook.yml
@@ -169,37 +169,59 @@
     # End: crictl configuration
 
   # ---
+  # if using vagrant nfs-common and open-iscsi already exist
   #Start: install nfs-common:
-  - name: install nfs client
-    apt:
-      name: nfs-common
-      state: present
-      update_cache: yes
-    notify: Restart nfs-common
-  #End: install nfs-common:
+  # - name: install nfs client
+  #   apt:
+  #     name: nfs-common
+  #     state: absent
+  #     update_cache: yes
+  #   # notify: Restart nfs-common
+  # #End: install nfs-common:
 
-  #Start: install open-iscsi:
-  - name: install open-iscsi
-    apt:
-      name: open-iscsi
-      state: present
-      update_cache: yes
-    notify: Restart open-iscsi
-  #End: install nfs-common:
+  # #Start: install open-iscsi:
+  # - name: install open-iscsi
+  #   apt:
+  #     name: open-iscsi
+  #     state: absent
+  #     update_cache: yes
+  #   # notify: Restart open-iscsi
+  #End: install open-iscsi:
+
+  # systemctl status nfs-common
+  - name: Restart nfs-common
+    systemd:
+      name: nfs-common
+      state: restarted
+      enabled: true
+      masked: no
+      daemon_reload: true
+
+  # systemctl status iscsid
+  - name: Restart iscsid
+    systemd:
+      name: iscsid
+      state: restarted
+      enabled: true
+      masked: no
+      daemon_reload: true
 
   handlers:
   - name: Restart containerd
-    service:
+    systemd:
       name: containerd
       state: restarted
+      daemon-reload: yes
 
-  - name: Restart nfs-common
-    service:
-      name: containerd
-      state: restarted
+  # - name: Restart nfs-common
+  #   systemd:
+  #     name: nfs-common
+  #     state: restarted
+  #     daemon_reload: true
 
 
-  - name: Restart open-iscsi
-    service:
-      name: open-iscsi
-      state: restarted
+  # - name: Restart open-iscsi
+  #   systemd:
+  #     name: open-iscsi
+  #     state: restarted
+  #     daemon_reload: true
