--- a/cluster/templates/haproxy.cfg
+++ b/cluster/templates/haproxy.cfg
@@ -56,6 +56,9 @@ frontend frontend_ssl_443
     cookie  SRVNAME insert indirect nocache
     default_backend http_backend
 
+    acl longhorn hdr_dom(host) -i longhorn.ui.duongdx.com
+    use_backend backend_longhorn if longhorn
+
 frontend kubernetes-frontend
   bind *:6443
   mode tcp
@@ -84,6 +87,13 @@ backend http_backend
   balance roundrobin
   server k8s-node01 {{ node01 }}:{{ http_node_port }} cookie p1 weight 1 check inter 2000
   server k8s-node02 {{ node02 }}:{{ http_node_port }} cookie p1 weight 1 check inter 2000
+
+backend backend_longhorn
+  mode    http
+  stats   enable
+  stats   auth username:password
+  balance roundrobin
+  server  k8s-longhorn 192.168.10.19:6860 cookie p1 weight 1 check inter 2000
 
 # frontend https_frontend
 #   bind *:443
