[longhorn + metalLB] config longhorn and metalLB for loadbalancer

--- a/longhorn/longhorn.values.yml
+++ b/longhorn/longhorn.values.yml
@@ -1,3 +1,9 @@
+service:
+  ui:
+    type: "ClusterIP"
+  manager:
+    type: ClusterIP
+
 defaultDataPath: /data/longhorn-storage/
 defaultReplicaCount: 2
 backupstorePollInterval: 500
