--- a/manifests/longhorn/testing-longhorn/longhorn.delete.storage.yml
+++ b/manifests/longhorn/testing-longhorn/longhorn.delete.storage.yml
@@ -2,6 +2,8 @@ kind: StorageClass
 apiVersion: storage.k8s.io/v1
 metadata:
   name: longhorn-storage-delete
+  annotations:
+    storageclass.kubernetes.io/is-default-class: "true"
 provisioner: driver.longhorn.io
 allowVolumeExpansion: true
 reclaimPolicy: Delete
